...
                android:layout_margin="10dp"
                android:text="@string/our_adress"
                style="@style/NormalText"
                />

            <TextView
                android:id="@+id/fragment_contacts_address1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:drawableLeft="@drawable/ic_farfor_address"
                android:gravity="center_vertical"
...
                android:gravity="center_vertical"
                android:text="@string/farfor_address2"
                style="@style/NormalText"
                />

            <TextView
                android:id="@+id/fragment_contacts_address3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:drawableLeft="@drawable/ic_farfor_address"
                android:gravity="center_vertical"
...
